plugins {
	id 'org.springframework.boot' version '2.5.4'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'de.gtwsp21'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 8
targetCompatibility = 8

repositories {
	mavenCentral()
}

dependencies {

	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

 tasks.withType(Copy).all {
    duplicatesStrategy 'exclude'
  }

jar {
    manifest {
        attributes(
                'Main-Class': 'de.gtwsp21.handmanserv.HandmanServApplication'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    eachFile {
    	duplicatesStrategy 'exclude'
    }
}

task stage(dependsOn: ['build', 'clean']){
	build.mustRunAfter clean
	//build.dependsOn(copyToLib)
}
/*
task copyToLib(type: Copy) {
    into "$buildDir/output/libs"
    from(configurations.runtime)
}
*/
test {
	useJUnitPlatform()
}
